# Bingo

./: CMakeLists.txt
BingoProject/: BingoProject.cpp  BingoProject.h  CMakeLists.txt  Card.cpp  Card.h  Interface.cpp  Interface.h  Message.h  Number.h  consts.h
BingoProject/src/: Bingo.cpp  Bingo.h  Card.cpp  Interface.cpp  Interface.h  Message.h  consts.h  shared.h  utils.cpp  utils.h
BingoProject/src/shared/: shared.h
Program/: main.cpp
Program/Binary/: Binary.cpp  Binary.h  CMakeLists.txt  shared.h
